# nichts

./: .gitignore  Cargo.toml  LICENSE  flake.nix
.github/: CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: rust.yml
src/: command.rs  error.rs  main.rs  package.rs
src/api/: history.rs  mod.rs  query.rs
src/operations/: help.rs  history.rs  mod.rs  query.rs  remove.rs  sync.rs  version.rs
src/options/: clean.rs  mod.rs  search.rs  upgrade.rs
