[package]
name = "nichts"
version = "0.2.4"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_derive = "4.5.49"
fast-strip-ansi = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
shlex = "1.3.0"

[profile.release-ci]
inherits = "release"
opt-level = 2
